--- a/tienda.html
+++ b/tienda.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="primeicons-master/primeicons.css">
     <link rel="stylesheet" href="css/all.css">
-    <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <title>Tienda</title>
 </head>
 <body>
     <header class="cabecera-principal">
@@ -42,32 +41,5 @@
             </a>
         </section>
     </header>
-    <main class="content-main">
-        <section class="content01-main">
-            <div class="content-banner">
-                <div class="boton-banner-left">
-                    <i class="pi pi-angle-left"></i>
-                </div>
-                <div class="banner"></div>
-                <div class="boton-banner-right">
-                    <i class="pi pi-angle-right"></i>
-                </div>
-            </div>
-        </section>
-        <section class="content02-main">
-            <div class="informacion01">
-                <header>
-                    <h3>Promocion en nuestras tiendas</h3>
-                </header>
-                <section>
-                    <p>Ahora tenemos promocion en nuestras tiendas de Saban Grande y El Paraiso en los siguientes Productos!</p>
-                    <p><i>Solo por tiempo limitado</i></p>
-                </section>
-                <footer>
-                    <a href="tienda.html">Ir a Promocion</a>
-                </footer>
-            </div>
-        </section>
-    </main>
 </body>
 </html>
