Creacion de tienda

--- a/tienda.html
+++ b/tienda.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="primeicons-master/primeicons.css">
     <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/tienda.css">
     <title>Tienda</title>
 </head>
 <body>
@@ -41,5 +42,76 @@
             </a>
         </section>
     </header>
+    <main class="content-main">
+        <section class="list-products">
+            <article class="product-01 promocion">
+                <div>
+                    <p>Promocion!</p>
+                    <img src="img/hi-12-grafite-420x315.jpg" alt="">
+                </div>
+                <header>
+                    <h4>Grafito</h4>
+                    <p>25$</p>
+                </header>
+                <div>
+                    <button><span class="texto-boton">Comprar</span></button>
+                </div>
+            </article>
+            
+            <article class="product-01 agotado">
+                <div>
+                    <p>agotado</p>
+                    <img src="img/hi-12-grafite-420x315.jpg" alt="">
+                </div>
+                <header>
+                    <h4>Grafito</h4>
+                    <p>25$</p>
+                </header>
+                <div>
+                    <button><span class="texto-boton">Comprar</span></button>
+                </div>
+            </article>
+
+            <article class="product-01">
+                <div>
+                    <img src="img/hi-12-grafite-420x315.jpg" alt="">
+                </div>
+                <header>
+                    <h4>Grafito</h4>
+                    <p>25$</p>
+                </header>
+                <div>
+                    <button><span class="texto-boton">Comprar</span></button>
+                </div>
+            </article>
+
+            <article class="product-01 promocion">
+                <div>
+                    <p>Promocion!</p>
+                    <img src="img/hi-12-grafite-420x315.jpg" alt="">
+                </div>
+                <header>
+                    <h4>Grafito</h4>
+                    <p>25$</p>
+                </header>
+                <div>
+                    <button><span class="texto-boton">Comprar</span></button>
+                </div>
+            </article>
+
+            <article class="product-01">
+                <div>
+                    <img src="img/hi-12-grafite-420x315.jpg" alt="">
+                </div>
+                <header>
+                    <h4>Grafito</h4>
+                    <p>25$</p>
+                </header>
+                <div>
+                    <button><span class="texto-boton">Comprar</span></button>
+                </div>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
